# streamlit-camouflage

./: .gitignore  Camouflage.py  Changelog.md  Dockerfile  README.md  backend.dockerfile  compose.yml  frontend.dockerfile  packages.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
camouflage/: __init__.py  color_match_utils.py  fuzzy_classifier.py  image_color_utils.py  image_utils.py
deployment/: deploy.sh
pages/: About.py
streamlit_camouflage/: advanced_objects.py  api.py  app.py  fuzzy_classifier.py  objects.py  webutils.py
streamlit_camouflage/v1/: advanced_objects.py  api_spec.py  endpoints.py  fuzzy_classifier.py  models.py  objects.py  utils.py
tests/: conftest.py  test_objects.py
webapp/: Camouflage.py
webapp/.streamlit/: config.toml
webapp/camouflage/: advanced_objects.py  color_match_utils.py  fuzzy_classifier.py  image_color_utils.py  image_utils.py  objects.py
webapp/markdown/: About.md
webapp/pages/: About.py  Advanced_Features.py  Outfit Analyzer.py
webapp/utils/: constants.py  webutils.py
