[tool.poetry]
name = "streamlit-camouflage"
version = "0.1.0"
description = ""
authors = ["Taylor Agarwal <taylor.agarwal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.11"
python-dotenv = "^1.0.0"


[tool.poetry.group.api.dependencies]
rembg = "^2.0.30"
webcolors = "^1.12"
scikit-fuzzy = "^0.4.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"


[tool.poetry.group.webapp.dependencies]
streamlit = "^1.20.0"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
